2006-08-03  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Define 30 seconds grace period
	to wait for proxies cleanup on application exit.

2006-08-02  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Set pipes in the child proxy to
	close-on-exec otherwise we may block forever if we 
	attempt to kill the proxy running "exec" Tcl command.
	
	Redesigned reaper thread not to block the caller by
	waiting on slave proxy processes to exit.

	The [ns_proxy handle] command accepts one optional argument
	which is interpreted as pool name and only those handles 
	belonging to the given pool are reported.

	* nsd/exec.c: Ns_WaitForProcess() logs also the signal name
	in addition to signal number.

2006-07-30  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* include/nsthread.h: Removed declaration of things normally
	declared in poll.h. We assume that all platforms that we 
	support have poll implementation in place, thus include the
	poll.h unconditionally.

	* include/ns.h:
	* nsd/nsd.h: config.h is now (again) only included in nsd.h
	as it otherwise causes trouble when linking another TEA compatible
	packages with the server as it re-declares PACKAGE_* stuff.

	* nsproxy/nsproxylib.c: Do not use u_int8/16/32_t typedefs as
	some platforms (Solaris) do not declare them; use uint8/16/32_t
	instead as they are defined everywhere in sys/types.h.

2006-07-29  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: List of free proxies could get
	corrupted under some circumstances. This has been fixed now.

	* tests/ns_proxy.test: Fixed enumeration of tests.

2006-07-25  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: New ns_proxy commands: send,wait,recv
	* nsproxy/ns_prox.man:  Added [ns_proxy send,wait,recv]
	* tests/ns_proxy.test:  Adjusted tests

	* include/ns.h:         Added ns_poll() wrapper which defaults 